Test Sandbox Project/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Standard Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Checking L2</fullName>
        </values>
        <values>
            <fullName>Checking L3</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated L2</fullName>
        </values>
        <values>
            <fullName>Escalated L3</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Reopen</fullName>
        </values>
        <values>
            <fullName>Response Received</fullName>
        </values>
        <values>
            <fullName>Solved</fullName>
        </values>
        <values>
            <fullName>Solved L2</fullName>
        </values>
        <values>
            <fullName>Solved L3</fullName>
        </values>
        <values>
            <fullName>Waiting on Customer</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Email__c</fullName>
        <formula>Account.PersonEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account_Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Phone__c</fullName>
        <label>Additional_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <label>Approval Request</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer Dana</fullName>
                </value>
                <value>
                    <fullName>Refund Saldo</fullName>
                </value>
                <value>
                    <fullName>Ubah Moderasi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bad_Parameter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bad Parameter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_Other__c</fullName>
        <label>Browser_Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Created_By__c</fullName>
        <label>Case Created By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_HTML__c</fullName>
        <label>Case HTML</label>
        <length>130000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case_Mobile__c</fullName>
        <label>Case Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>Owner:User.FirstName  &amp; &apos; &apos; &amp;  Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_SubCategory_1__c</fullName>
        <label>Sub Category 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Kendala Login</fullName>
                </value>
                <value>
                    <fullName>Akun dihack</fullName>
                </value>
                <value>
                    <fullName>Akun diblokir</fullName>
                </value>
                <value>
                    <fullName>Laporan phishing</fullName>
                </value>
                <value>
                    <fullName>Laporan penipuan</fullName>
                </value>
                <value>
                    <fullName>Kendala teknis akun</fullName>
                </value>
                <value>
                    <fullName>Gold Merchant</fullName>
                </value>
                <value>
                    <fullName>TopAds</fullName>
                </value>
                <value>
                    <fullName>Admin Toko</fullName>
                </value>
                <value>
                    <fullName>Etalase</fullName>
                </value>
                <value>
                    <fullName>Free Return</fullName>
                </value>
                <value>
                    <fullName>Produk</fullName>
                </value>
                <value>
                    <fullName>Reputasi Toko</fullName>
                </value>
                <value>
                    <fullName>Statistik Toko</fullName>
                </value>
                <value>
                    <fullName>Pengaturan Pengiriman</fullName>
                </value>
                <value>
                    <fullName>Gagal checkout dengan Credit Card</fullName>
                </value>
                <value>
                    <fullName>Gagal checkout dengan instant payment lainnya</fullName>
                </value>
                <value>
                    <fullName>Dana belum masuk rekening</fullName>
                </value>
                <value>
                    <fullName>Salah data saat tarik dana</fullName>
                </value>
                <value>
                    <fullName>Dana WD kembali ke saldo Tokopedia</fullName>
                </value>
                <value>
                    <fullName>Tujuan pengiriman belum tersedia</fullName>
                </value>
                <value>
                    <fullName>Promo Marketplace</fullName>
                </value>
                <value>
                    <fullName>Promo Digital</fullName>
                </value>
                <value>
                    <fullName>Promo Tiket kereta</fullName>
                </value>
                <value>
                    <fullName>Pencarian tiket gagal</fullName>
                </value>
                <value>
                    <fullName>Pembelian tiket gagal dan dana terpotong</fullName>
                </value>
                <value>
                    <fullName>Data pada kode booking salah</fullName>
                </value>
                <value>
                    <fullName>Transaksi dengan kode voucher gagal</fullName>
                </value>
                <value>
                    <fullName>Pulsa Tidak Masuk</fullName>
                </value>
                <value>
                    <fullName>Pengisian Pulsa Selalu Gagal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Sub_Status__c</fullName>
        <label>Case_Sub_Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>L2_Backoffice  TopAds</fullName>
                </value>
                <value>
                    <fullName>L2_Back office Merchant</fullName>
                </value>
                <value>
                    <fullName>L2_Account</fullName>
                </value>
                <value>
                    <fullName>L2_Discovery</fullName>
                </value>
                <value>
                    <fullName>L2_General</fullName>
                </value>
                <value>
                    <fullName>L2_Payment</fullName>
                </value>
                <value>
                    <fullName>L2_TokoCash</fullName>
                </value>
                <value>
                    <fullName>L2_Order</fullName>
                </value>
                <value>
                    <fullName>L2_Digital</fullName>
                </value>
                <value>
                    <fullName>L2_Logistic</fullName>
                </value>
                <value>
                    <fullName>L2_Resolution</fullName>
                </value>
                <value>
                    <fullName>L2_Call center - Hacked Account</fullName>
                </value>
                <value>
                    <fullName>L2_Call Center - Gold Merchant</fullName>
                </value>
                <value>
                    <fullName>L2_Call center - New Customer</fullName>
                </value>
                <value>
                    <fullName>L2_Call center - Instant Courier</fullName>
                </value>
                <value>
                    <fullName>Power Rangers</fullName>
                </value>
                <value>
                    <fullName>Jerry</fullName>
                </value>
                <value>
                    <fullName>Sonic</fullName>
                </value>
                <value>
                    <fullName>Stitch</fullName>
                </value>
                <value>
                    <fullName>Scrooge</fullName>
                </value>
                <value>
                    <fullName>Chipmunk</fullName>
                </value>
                <value>
                    <fullName>Scooby Doo</fullName>
                </value>
                <value>
                    <fullName>Doraemon</fullName>
                </value>
                <value>
                    <fullName>Tom</fullName>
                </value>
                <value>
                    <fullName>Baymax</fullName>
                </value>
                <value>
                    <fullName>Simba</fullName>
                </value>
                <value>
                    <fullName>Keroppi</fullName>
                </value>
                <value>
                    <fullName>Mr.Krabs</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Conan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CategoryUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CategoryUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox will be used to check if the category is changed and if yes, submit the record for approval</description>
        <label>Category_Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Akun</fullName>
                </value>
                <value>
                    <fullName>Jualan</fullName>
                </value>
                <value>
                    <fullName>Gagal Checkout</fullName>
                </value>
                <value>
                    <fullName>Tarik Dana</fullName>
                </value>
                <value>
                    <fullName>Pengiriman</fullName>
                </value>
                <value>
                    <fullName>Promo</fullName>
                </value>
                <value>
                    <fullName>Kritik &amp; Saran</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Tiket Kereta</fullName>
                </value>
                <value>
                    <fullName>Pulsa</fullName>
                </value>
                <value>
                    <fullName>Paket Data</fullName>
                </value>
                <value>
                    <fullName>BPJS</fullName>
                </value>
                <value>
                    <fullName>PLN</fullName>
                </value>
                <value>
                    <fullName>Saldo</fullName>
                </value>
                <value>
                    <fullName>Voucher Game</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
                <value>
                    <fullName>Angsuran Kredit</fullName>
                </value>
                <value>
                    <fullName>Donasi</fullName>
                </value>
                <value>
                    <fullName>Pascabayar</fullName>
                </value>
                <value>
                    <fullName>TV Kabel</fullName>
                </value>
                <value>
                    <fullName>Telepon</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending UNIK</fullName>
                </value>
                <value>
                    <fullName>CC Challenge</fullName>
                </value>
                <value>
                    <fullName>Pending Due</fullName>
                </value>
                <value>
                    <fullName>Waiting third party</fullName>
                </value>
                <value>
                    <fullName>Checkout State</fullName>
                </value>
                <value>
                    <fullName>Payment Confirm</fullName>
                </value>
                <value>
                    <fullName>Payment Confirmed UNIK</fullName>
                </value>
                <value>
                    <fullName>Payment Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <formula>IMAGE( CASE
(Origin,
&quot;Facebook&quot;,&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=01528000003OAEr&amp;oid=00DN0000000AxH9&amp;lastMod=1481540422000&quot;,
&quot;Twitter&quot;,&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=01528000003OAEs&amp;oid=00DN0000000AxH9&amp;lastMod=1481540447000&quot;,
&quot;Instagram&quot;,&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=01528000003OAF6&amp;oid=00DN0000000AxH9&amp;lastMod=1481540473000&quot;,
&quot;https://c.ap2.content.force.com/servlet/servlet.ImageServer?id=01528000003OAEr&amp;oid=00DN0000000AxH9&amp;lastMod=1481540422000&quot;),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <formula>Account.Contact__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Agent_Reply__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Count Agent Reply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Last_Login__c</fullName>
        <label>Customer Last Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>Account.PersonContact.FirstName &amp;&quot; &quot;&amp; Account.PersonContact.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <formula>TEXT( Account.Customer_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>happy</fullName>
                </value>
                <value>
                    <fullName>confused</fullName>
                </value>
                <value>
                    <fullName>annoyed</fullName>
                </value>
                <value>
                    <fullName>frustrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_To_Agent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Make sure this checkbox is checked for DirectToAgent routing.
Uncheck after done.</inlineHelpText>
        <label>Direct To Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_Key__c</fullName>
        <label>Duplicate Key</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>IF( AND(TEXT(Count_Agent_Reply__c) = &apos;0&apos;, TEXT(Status) = &apos;Solved&apos;), NOW() - CreatedDate, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Account__c</fullName>
        <label>Email Account</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Guest__c</fullName>
        <label>Email Guest</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Escalated_Cases__c</fullName>
        <formula>Account.Escalated_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Escalated_Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalated_Status__c</fullName>
        <label>Escalated Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Escalated to L2</fullName>
                </value>
                <value>
                    <fullName>Escalated to L3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Escalated_to_L2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to L2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Escalated_to_L3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Escalated to L3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Response_Time__c</fullName>
        <formula>TEXT(
 FLOOR(SFPS_SCS_FirstOutboundPostAt__c - CreatedDate)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((SFPS_SCS_FirstOutboundPostAt__c - CreatedDate)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((SFPS_SCS_FirstOutboundPostAt__c - CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Response Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Followers__c</fullName>
        <formula>Account.Followers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Followers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Following__c</fullName>
        <formula>Account.Following__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Following</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hourly__c</fullName>
        <formula>IF ((VALUE (RIGHT(LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-7),2)) + 7) &gt; 24, 
(VALUE (RIGHT(LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-7),2)) + 7 - 24), 
(VALUE (RIGHT(LEFT(TEXT(CreatedDate),LEN(TEXT(CreatedDate))-7),2)) + 7)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hourly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_1__c</fullName>
        <label>Image 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_2__c</fullName>
        <label>Image 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Image_3__c</fullName>
        <label>Image 3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Inbox_Read_Status__c</fullName>
        <label>Inbox Read Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Unread</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_L1_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial L1 Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intools__c</fullName>
        <description>akan di gunakan pada saat pengiriman data dari System lain
by pak alfons</description>
        <inlineHelpText>akan di gunakan pada saat pengiriman data dari System lain
by pak alfons</inlineHelpText>
        <label>Intools</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_No__c</fullName>
        <label>Invoice No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Number</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsFraud__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFraud</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Comment_Added__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Comment Added</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Gandalf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Gandalf</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Gojek__c</fullName>
        <label>Is Gojek</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Gold_Merchant2__c</fullName>
        <formula>TEXT(Account.Is_Gold_Merchant__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Gold Merchant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Gold_Merchant__c</fullName>
        <label>Is Gold Merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Guest__c</fullName>
        <label>Is Guest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_VIP_Customer__c</fullName>
        <formula>Account.Is_VIP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_VIP_Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_Escalated_Time__c</fullName>
        <description>Time when the case status is changed to Pending with corresponding L2 Case-sub-status</description>
        <label>L1_Escalated_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L1_Escalated_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>L1 Escalated User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2_Case_Owner__c</fullName>
        <label>L2 Case Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2_Escalated_Time__c</fullName>
        <description>Time when the case status is changed to Checking L2 to Escalated L3. When the case is escalated to L3</description>
        <label>L2_Escalated_Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>L3_Case_Owner__c</fullName>
        <label>L3 Case Owner</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Migration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Reply__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Need Reply</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_assign_to_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not assign to Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OS_Other__c</fullName>
        <label>OS_Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Cases__c</fullName>
        <formula>Account.Open_Cases__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open_Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <formula>TEXT(Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Payment__c.Id</field>
                <operation>equals</operation>
                <valueField>$Source.LastModifiedById</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Other__c</fullName>
        <label>Phone_Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Produk_Tokopedia__c</fullName>
        <label>Produk Tokopedia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Queueing_Time__c</fullName>
        <description>Queueing Time</description>
        <formula>TEXT(
 FLOOR(CreatedDate - SFPS_SCS_FirstInboundPostAt__c)
)  &amp; &quot; Days &quot; &amp;
TEXT(
ROUND(MOD((CreatedDate - SFPS_SCS_FirstInboundPostAt__c)*24,24),0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((CreatedDate - SFPS_SCS_FirstInboundPostAt__c)*1440,60),0)
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference in Social First Inbound Post to the Time Social Post is opened</inlineHelpText>
        <label>Queueing Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Date__c</fullName>
        <label>Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolved_Time__c</fullName>
        <description>Time from Case open to Case Closed</description>
        <formula>if (ClosedDate &gt; CreatedDate, (ClosedDate - CreatedDate) * 24 * 60, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolved Time in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <description>Response Time</description>
        <formula>TEXT( 
FLOOR(SFPS_SCS_FirstOutboundPostAt__c - SFPS_SCS_FirstInboundPostAt__c) 
) &amp; &quot; Days &quot; &amp; 
TEXT( 
ROUND(MOD((SFPS_SCS_FirstOutboundPostAt__c - SFPS_SCS_FirstInboundPostAt__c)*24,24),0) 
) &amp;&quot; Hours &quot; &amp; 
TEXT( 
ROUND(MOD((SFPS_SCS_FirstOutboundPostAt__c - SFPS_SCS_FirstInboundPostAt__c)*1440,60),0) 
) &amp;&quot; Minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Time difference between first response to social post</inlineHelpText>
        <label>Response Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Search_Invoice__c</fullName>
        <label>Result Search Invoice</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCS_Additional_help__c</fullName>
        <label>SCS_Additional_help</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SCS_Notes__c</fullName>
        <label>SCS_Case_Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Attr1__c</fullName>
        <label>Social Attr1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Attr2__c</fullName>
        <label>Social Attr2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_Attr3__c</fullName>
        <label>Social Attr3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFPS_SCS_AvgResponseTime__c</fullName>
        <description>Average response time by agent in minutes</description>
        <formula>if (ISNULL(SFPS_SCS_CumulativeResponseTime__c) || ISNULL(SFPS_SCS_NumberOutboundPosts__c) || SFPS_SCS_NumberOutboundPosts__c = 0, NULL, SFPS_SCS_CumulativeResponseTime__c / SFPS_SCS_NumberOutboundPosts__c)</formula>
        <label>Social AvgResponseTime in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>